--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,9 +20,11 @@ body {
 
 .header {
 	position: fixed;
-	width: 100%;
-	background-color: white;
-	z-index: 999;
+    width: 100%;
+    background-color: white;
+    z-index: 999;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow effect */
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 .topHeader{
 	background-color: #001459;
@@ -539,6 +541,12 @@ body {
 	color: #226797;
 }
 
+.getInTouch{
+	color: #226797 !important;
+	font-weight: 800;
+	font-size: 20px;
+}
+
 #address .add-text span {
 	font-weight: bold;
 	font-size: 22px;
@@ -586,7 +594,7 @@ body {
 #contact-us .google-maps {
 	position: relative;
 	width: 100%;
-	height: 500px;
+	height: 492px;
 	overflow: hidden;
 }
 
@@ -601,7 +609,7 @@ body {
 /*.....Form......*/
 #contact-form {
 	background: #fefefe;
-	margin-bottom: 50px;
+	/* margin-bottom: 50px; */
 }
 
 #form .form-item {
@@ -815,7 +823,7 @@ body {
 }
 
 #form .form-btn:hover {
-	background: rgba(168, 38, 130, 0.8) !important;
+	background: #001459 !important;
 	color: #fff;
 	border-bottom: 4px solid rgba(29, 84, 126, 0.8) !important;
 }
@@ -918,5 +926,139 @@ body {
 		max-width: 100%;
 	}
 }
+
+
+
+
+/* .contactFormFill{
+	position: absolute;
+    width: 100%;
+    max-width: 980px;
+    background-color: white;
+    z-index: 999;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    left: 50%;
+    transform: translateX(-50%);
+    height: fit-content;
+    padding: 43px;
+    bottom: -153px; 
+} */
+
+.contactFormFill {
+    position: absolute;
+    width: 100%;
+    max-width: 1185px;
+    background-color: white;
+    /* z-index: 999; */
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    /* border: 1px solid rgba(0, 0, 0, 0.1); */
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 9px;
+    bottom: -43px;
+}
+
+.contactFormFill .paddingInside{
+    padding: 43px;
+
+}
+
+/* Optional: Add transition for smoother appearance changes */
+.contactFormFill {
+    transition: top 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.contactInformation{
+	box-shadow: rgba(41, 41, 59, 0.2) 0px 5px 30px;
+    margin-top: 180px;
+	padding: 40px;
+    background: rgb(246, 246, 246);
+}
+
+
+/* Style for the container */
+.custom-input {
+  position: relative;
+}
+
+.custom-input input {
+  height: 32px;
+}
+
+select {
+  padding: 6px !important;
+}
+
+.custom-label {
+  position: absolute;
+  top: -10px;
+  left: 10px;
+  z-index: 1;
+  padding: 0 5px;
+  background-color: white;
+}
+
+.contactRight{
+	background-color: #001459;
+	
+}
+
+/* Style for the input field */
+.input-field {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid var(--borderInput);
+  border-radius: 5px;
+}
+.custom-input input{
+	height: 32px !important;
+}
+.heightBlankBg{
+	height: 400px;
+}
+/* Style for the border around the input field */
+.custom-input input:focus+.custom-label,
+.custom-input input:not(:placeholder-shown)+.custom-label {
+  font-size: 12px;
+  /* Adjust font size */
+  top: -10px;
+  /* Adjust positioning */
+  left: 10px;
+  /* Adjust positioning */
+   background-color: #ebe9e9; /* Match with container background */
+  z-index: 1;
+}
+
+.custom-input input:focus,
+.custom-input input:not(:placeholder-shown) {
+  border-color: var(--borderInput);
+  /* Adjust border color */
+}
+
+.custom-label{
+	font-size: 12px !important;
+}
+
+.contactInformation .card {
+    position: relative; /* Ensure the pseudo-element is positioned relative to this element */
+    border-radius: 5px;
+	height: 216px;
+}
+
+.contactInformation .card::after {
+    content: ''; /* Required for the pseudo-element */
+    position: absolute; /* Position the pseudo-element */
+    bottom: 0; /* Align the pseudo-element at the bottom */
+    left: 0; /* Align the pseudo-element to the left edge */
+    width: 100%; /* Make the pseudo-element span the full width of the parent */
+    height: 11px; /* Set the height of the pseudo-element to create the border */
+    background-image: linear-gradient(90deg, rgba(18,141,136,1) 0%, rgba(45,72,157,1) 100%);
+    border-radius: 0 0 5px 5px; /* Ensure the bottom corners match the parent */
+}
+
+
+
+
 
 /*....................................*/
